<resources>
    <string name="app_name">Grocery List</string>

    <string name="facebook_application_id" translatable="false">727413587706249</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb727413587706249</string>
    <string name="title_activity_main_grocery">Groceries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">your@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="due_date">Due Date:</string>
    <string name="btn_add">Add</string>
    <string name="dialog_due_date">Due Date</string>
    <string name="grocery_list_title">Grocery List Title</string>
    <string name="gl_dialog_title">Title</string>
    <string name="bnt_cancel">Cancel</string>
    <string name="glist_title_hint">Enter list name</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="amount">Amount:</string>
    <string name="quantity">Quantity</string>
    <string name="list_item_hint">list item</string>
    <string name="menu_user_profile">My Profile</string>
    <string name="menu_messages">Messages</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="gl_no_list">You do not have any list yet!</string>
    <string name="btn_share_list">Send</string>
    <string name="delete_item">Delete Item</string>
    <string name="email">email</string>
    <string name="gl_no_list_items">No items added yet.</string>
    <string name="shared_list">Shared List</string>
    <string name="sharing_methods">Sharing Methods</string>
    <string name="grocery_user">Grocery User</string>
    <string name="Email">Email</string>
    <string name="add_users">Add users</string>
    <string name="user_name">User Name:</string>

    <string name="kg">kg(s)</string>
    <string name="gram">gram(s)</string>
    <string name="liter">liter(s)</string>

    <string name="pound">pound(s)</string>
    <string name="ounce">ounce(s)</string>
    <string name="piece">piece(s)</string>
    <string name="gallon">gallon(s)</string>

    <string name="prio_low">Low</string>
    <string name="prio_med">Medium</string>
    <string name="prio_high">High</string>

    <string name="pref_met_val" translatable="false">unit_measure_metric</string>
    <string name="pref_imp_val" translatable="false">unit_measure_imperial</string>
    <string name="pref_met_ent">Metric (kg)</string>
    <string name="pref_imp_ent">Imperial (lb)</string>

    <string name="pref_noti_key" translatable="false">notification</string>
    <string name="pref_noti_title" translatable="true">Notifications</string>
    <string name="pref_noti_summ_on" translatable="true">Send notification</string>
    <string name="pref_noti_summ_off" translatable="true">Don\'t Send notification</string>
    <string name="pref_measure_key" translatable="false">unit_measurement</string>
    <string name="pref_measure_title" translatable="true">Measurements</string>
    <string name="priority">Priority</string>
    <string name="appwidget_text">Grocery List</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_title">Grocery List</string>
    <string name="menu_grocery_list_item">Grocery List</string>

    <!-- For testing admob id -->
    <string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="open_grocery_list">Open Grocery List</string>

</resources>
