<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/tv_dialog_List_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/glist_title_hint"
        android:layout_marginTop="8dp"
        android:imeOptions = "flagNoFullscreen"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/tv_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:imeOptions = "flagNoFullscreen"
        android:hint="@string/dialog_due_date"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_List_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_List_name"
        android:autofillHints="@string/dialog_due_date" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/gl_priority"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_date" />

    <Button
        android:id="@+id/btn_dlg_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bnt_cancel"
        app:layout_constraintEnd_toStartOf="@+id/btn_gl_dialog_submit"
        app:layout_constraintTop_toBottomOf="@+id/spinner_priority" />

    <Button
        android:id="@+id/btn_gl_dialog_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_priority" />

</androidx.constraintlayout.widget.ConstraintLayout>