<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:maxWidth="300dp"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_dlg_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:shadowColor="@color/limeGreen"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btn_add"
        android:textColor="@color/white"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_dlg_unit" />

    <Button
        android:id="@+id/btn_dlg_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:shadowColor="@color/limeGreen"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/bnt_cancel"
        android:textColor="@color/white"
        android:theme="@style/Theme.MaterialComponents.NoActionBar"
        app:layout_constraintEnd_toStartOf="@+id/btn_dlg_add"
        app:layout_constraintTop_toTopOf="@+id/btn_dlg_add" />

    <EditText
        android:id="@+id/tv_dlg_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/list_item_hint"
        android:imeOptions="flagNoFullscreen"
        android:importantForAutofill="no"
        android:inputType="text"
        android:theme="@style/EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_dialog_qty"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:theme="@style/EditTextListItem"
        app:layout_constraintEnd_toStartOf="@+id/spinner_dlg_unit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dlg_item_name" />

    <Spinner
        android:id="@+id/spinner_dlg_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:dropDownWidth="150dp"
        android:entries="@array/unit_measure_imperial"
        android:theme="@style/EditTextListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_dialog_qty"
        app:layout_constraintTop_toTopOf="@+id/tv_dialog_qty" />

</androidx.constraintlayout.widget.ConstraintLayout>